crates/pixi_manifest/src/snapshots/pixi_manifest__parsed_manifest__tests__build_section_deserialization.snap
---
source: crates/pixi_manifest/src/parsed_manifest.rs
expression: manifest.build.clone().unwrap()
---
dependencies:
  - python-build-backend >12
build-backend: python-build-backend
channels: []
