crates/pixi_manifest/src/snapshots/pixi_manifest__parsed_manifest__tests__pypi_options_default_feature.snap
---
source: crates/pixi_manifest/src/parsed_manifest.rs
expression: "toml_edit::de::from_str::<ParsedManifest>(&contents).expect(\"parsing should succeed!\").project.pypi_options.clone().unwrap()"
---
index-url: "https://pypi.org/simple"
extra-index-urls:
  - "https://pypi.org/simple2"
find-links:
  - path: "../foo"
  - url: "https://example.com/bar"
no-build-isolation: ~
index-strategy: ~
