crates/pixi_manifest/src/snapshots/pixi_manifest__parsed_manifest__tests__pypy_options_project_and_default_feature.snap
---
source: crates/pixi_manifest/src/parsed_manifest.rs
expression: manifest.project.pypi_options.clone().unwrap()
---
index-url: ~
extra-index-urls:
  - "https://pypi.org/simple2"
find-links: ~
no-build-isolation: ~
index-strategy: ~
